publish on push in prod

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,6 +9,9 @@
 name: PYPI Upload Python Package
 
 on:
+  push:
+    branches:
+      - prod
   release:
     types: [published]
   workflow_dispatch:
