--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pstruc
-version = 0.2.1
+version = 0.3.0
 author = Ignacio Rigoni
 description = Get a project file structure to analyze it
 long_description = file: README.md
@@ -18,6 +18,10 @@ install_requires =
     PyYAML
 python_requires = >=3.11.0
 include_package_data = True
+
+[options.entry_points]
+console_scripts =
+    pstruc = pstruc.pstruc:main
 
 [options.extras_require]
 dev = 
